--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Classification</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Image Classification</h1>
-    <input type="file" id="imageInput" accept="image/*">
-    <button onclick="classifyImage()">Classify</button>
-    <div id="result"></div>
-
-    <script src="script.js"></script>
+    <header>
+        <h1>Image Classification</h1>
+    </header>
+    <main>
+        <input type="file" id="imageInput" accept="image/*">
+        <button onclick="classifyImage()">Classify</button>
+        <div id="result"></div>
+        <div class="image-classification-container">
+            <!-- Image classification elements will be inserted here by JavaScript -->
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2023 Image Classification</p>
+    </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
